# distributed_training

./: .gitignore  README.md  pyproject.toml  snapshot.pt
conf/: config.yaml
conf/model/: default.yaml
conf/train/: default.yaml
infrastructure/: main.tf  outputs.tf  variables.tf
infrastructure/nebius/cluster/: variables.tf
infrastructure/nebius/single_gpu/: main.tf  variables.tf
infrastructure/nebius/single_gpu/scripts/: cloud-init.tftpl
infrastructure/scripts/: cloud-init.tftpl
outputs/2024-12-29/22-01-57/.hydra/: hydra.yaml
outputs/2024-12-29/22-31-15/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-29/22-31-33/.hydra/: hydra.yaml
outputs/2024-12-29/22-32-01/.hydra/: hydra.yaml
outputs/2024-12-29/22-32-02/.hydra/: hydra.yaml
outputs/2024-12-29/22-36-10/.hydra/: hydra.yaml
outputs/2024-12-29/22-59-46/.hydra/: hydra.yaml
outputs/2024-12-29/23-07-37/.hydra/: hydra.yaml
outputs/2024-12-29/23-09-19/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-29/23-10-22/.hydra/: hydra.yaml  overrides.yaml
outputs/2024-12-29/23-11-52/.hydra/: hydra.yaml
outputs/2024-12-29/23-14-04/.hydra/: hydra.yaml
src/: data_utils.py  ddp_strategy.py  distributed_trainer.py  fsdp_strategy.py  multigpu_multi_node.py  multigpu_single_node.py  parallel_strategy.py
src/dist_strategy/: ddp_strategy.py  dist_strategy.py  fsdp_strategy.py
src/playground/: ddp_script.py
